# LlamaRanch

./: .gitignore  CONTRIBUTING.md  IDENTITY.md  LICENSE  README.md  brand.html  chat.html  config.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: build.yml
docs/: anim.js  dither.js  index.html  site.css  style.css  wizard.html
docs/docs/: docs.css  index.html
docs/superpowers/plans/: 2026-06-18-llamaranch-mvp.md  2026-06-19-macos-dev-loop.md
docs/superpowers/specs/: 2026-06-18-llamaranch-design.md  2026-06-19-macos-dev-loop-design.md  2026-06-19-macos-native-ux-design.md
scripts/: install-desktop.sh  llamaranch.desktop
src/: brand.ts  chat.css  chat.ts  config.ts  dither.ts  glyph.ts  main.ts  paths.ts  platform.ts  pretty.ts  router-restore.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  commands.rs  config.rs  eval.rs  fit.rs  gateway.rs  gguf.rs  hardware.rs  launch.rs  lib.rs  main.rs  quant.rs  quant_corpus.txt  scanner.rs  searxng.rs  server.rs  telemetry.rs
src-tauri/src/brain/: backend.rs  gate.rs  mod.rs  pool.rs  resolver.rs  router.rs  tools.rs
src/assets/fonts/: fonts.css
src/brand/: components.css  theme.ts  tokens.css
website/: index.html  style.css
wizard/: package-lock.json  package.json
wizard/src/: app-install.js  config.js  detect.js  engine.js  http.js  index.js  logo.js  models.js  searxng.js  serve.js  uninstall.js  update.js  version.js
